# NeuralNet

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
NeuralNetLib/: CMakeLists.txt  DataSet.h  DataSetReader.cpp  DataSetReader.h  IDataSetReader.h  NeuralNet.cpp  NeuralNet.h  Utils.cpp  Utils.h
NeuralNetTests/: CMakeLists.txt  DataSetReaderTests.cpp  NeuralNetLibTests.cpp
ThreadPoolLib/: BlockingQueue.h  CMakeLists.txt  IBlockingQueue.h  IRunner.h  IThreadPool.h  Runner.h  ThreadPool.cpp  ThreadPool.h
ThreadPoolLibTests/: BlockingQueueTests.cpp  CMakeLists.txt
